Fix project text overlapping menu on small view due to positioning.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -102,7 +102,6 @@ a, a:visited {
         padding: 10% 5%;
         display: flex;
         flex-direction: column;
-        // justify-content: space-between;
         color: #FFFFFF;
         border-radius: 2%;
 
@@ -119,8 +118,6 @@ a, a:visited {
                 width: 90%;
             }
             .project-services {
-                position: relative;
-                bottom: -10%;
                 font-size: 0.85em;
             }
     }
@@ -261,7 +258,6 @@ footer {
             .project-services {
                 grid-area: left-bottom;
                 align-self: end;
-                bottom: 0px;
             }
     }
 
